--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "cross-env NODE_ENV=development npm run dev:server",
     "start": "cross-env NODE_ENV=production npm run start:server",
     "postinstall": "npm run build",
-    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --recursive --compilers js:babel-register",
+    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --recursive --reporter spec ./tests/ --compilers js:babel-register",
     "test:watch": "npm test -- --watch"
   },
   "repository": {
@@ -57,8 +57,10 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
     "copy-webpack-plugin": "^2.1.3",
     "css-loader": "^0.23.1",
+    "expect": "^1.20.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "fs-extra": "^0.30.0",
