--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "compression": "^1.6.1",
     "cross-env": "^1.0.7",
     "express": "^4.13.4",
+    "express-sslify": "^1.0.1",
     "helmet": "^2.0.0",
     "knex": "^0.10.0",
     "lodash": "^4.11.2",
