--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
     "copy-webpack-plugin": "^2.1.3",
     "css-loader": "^0.23.1",
-    "expect": "^1.20.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "fs-extra": "^0.30.0",
