Using Express session running on Redis

--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "bookshelf": "^0.9.4",
     "classnames": "^2.2.5",
     "compression": "^1.6.1",
+    "connect-redis": "^3.0.2",
     "cross-env": "^1.0.7",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "express-sslify": "^1.0.1",
     "helmet": "^2.0.0",
     "knex": "^0.10.0",
     "lodash": "^4.11.2",
+    "mongoose": "^4.4.17",
     "normalize.css": "^4.1.1",
     "pq": "0.0.3",
     "react": "^15.0.1",
