Move all static files inside src/ dir

--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "build": "npm run build:babel && npm run build:webpack",
     "build:babel": "./node_modules/.bin/babel ./src --ignore dist,node_modules --out-dir ./dist",
     "build:webpack": "./node_modules/.bin/webpack --verbose --colors --display-error-details --production --config ./dist/webpack.config.js",
-    "start:server": "node ./dist/index.js",
-    "dev:webpack": "./node_modules/.bin/webpack --verbose --colors --display-error-details --progress --config ./src/webpack.config.js",
-    "dev:server": "./node_modules/.bin/babel-node ./src/index.js",
-    "dev": "cross-env NODE_ENV=development npm run dev:server",
     "start": "cross-env NODE_ENV=production npm run start:server",
+    "start:server": "node ./dist/index.js",
+    "dev": "cross-env NODE_ENV=development npm run dev:server",
+    "dev:server": "./node_modules/.bin/babel-node ./src/index.js",
     "postinstall": "npm run build",
     "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --recursive --reporter spec ./tests/ --compilers js:babel-register",
     "test:watch": "npm test -- --watch"
@@ -62,6 +61,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
+    "breakpoint-sass": "^2.7.0",
     "chai": "^3.5.0",
     "copy-webpack-plugin": "^2.1.3",
     "css-loader": "^0.23.1",
