--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "compression": "^1.6.1",
     "connect-redis": "^3.0.2",
     "cross-env": "^1.0.7",
+    "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "express-sslify": "^1.0.1",
