--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "redux-devtools-log-monitor": "^1.0.11",
     "sass-loader": "^3.2.0",
     "sinon": "^1.17.4",
+    "sinon-mongoose": "^1.2.1",
     "style-loader": "^0.13.1",
     "supertest": "^1.2.0",
     "url-loader": "^0.5.7",
